Updates dependencies, fixes scroll on mobile.

--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Domine', sans-serif;
-    height: 100vh;
+    height: 100%;
     transition: all .3s;
 }
 
